// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpinnerCircularSplit matches the snapshot 1`] = `
<svg
  fill="none"
  style={
    Object {
      "color": "#fff",
      "overflow": "visible",
      "width": "100px",
    }
  }
  viewBox="0 0 66 66"
>
  <circle
    cx="33"
    cy="33"
    fill="none"
    r="28"
    stroke="rgba(0,0,0,0.44)"
    strokeWidth={2}
  />
  <circle
    cx="33"
    cy="33"
    fill="none"
    r="28"
    stroke="currentColor"
    strokeDasharray="5, 170"
    strokeDashoffset="1"
    strokeLinecap="round"
    strokeWidth={2}
    style={
      Object {
        "animation": "spinners-react-circular-split 14s linear infinite",
      }
    }
    transform="rotate(-90 33 33)"
  />
</svg>
`;

exports[`SpinnerCircularSplit matches the snapshot with default props 1`] = `
<svg
  fill="none"
  style={
    Object {
      "color": "#38ad48",
      "overflow": "visible",
      "width": "50px",
    }
  }
  viewBox="0 0 66 66"
>
  <circle
    cx="33"
    cy="33"
    fill="none"
    r="28"
    stroke="rgba(0,0,0,0.44)"
    strokeWidth={4}
  />
  <circle
    cx="33"
    cy="33"
    fill="none"
    r="28"
    stroke="currentColor"
    strokeDasharray="5, 170"
    strokeDashoffset="1"
    strokeLinecap="round"
    strokeWidth={4}
    style={
      Object {
        "animation": "spinners-react-circular-split 1.4s linear infinite",
      }
    }
    transform="rotate(-90 33 33)"
  />
</svg>
`;
